@@ -1,5 +1,11 @@
 2009-01-19  Xavier Queralt Mateu  <xqueralt@flumotion.com>
 
+	* flumotion/admin/gtk/greeter.py:
+	Hide 'Start new manager and connect to it' option on windows.
+	Fixes #1179
+
+2009-01-19  Xavier Queralt Mateu  <xqueralt@flumotion.com>
+
 	* flumotion/common/managerspawner.py:
 	Do not translate worker and manager when they are part from a command.
 
